<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.watsfordinner.ui.home.HomeFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.watsfordinner.ui.recipes.RecipesFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.watsfordinner.ui.generate.GenerationFragment"
        android:label="@string/title_generate"
        tools:layout="@layout/fragment_generate" />
</navigation>